--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="pt-BR">
 
@@ -24,25 +25,19 @@
     <!-- Importação do Font Awesome para ícones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-    <!-- Ícone para a aba do navegador (opcional) -->
-    <link rel="icon" href="/overcel2/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="/overcel2/favicon.ico" type="image/x-icon">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="shortcut icon" href="/overcel2/favicon.ico">
+    <!-- Ícone para a aba do navegador -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-
-    <!-- Informações de SEO adicionais (opcional, mas útil) -->
+    <!-- Informações de SEO adicionais -->
     <meta name="author" content="Overcel">
     <meta name="keywords"
         content="Bateria íon-lítio 18650 3,7v, Bateria, celulas, celulas de litio, bateria LFP, LFP, energia solar">
 </head>
 
-
 <body id="topo">
     <nav class="navbar">
         <img src="assets/images/logoo.png" alt="Logo" class="logo">
-
         <span class="brand-name">OverCel</span>
     </nav>
 
@@ -57,8 +52,6 @@
             <a href="https://api.whatsapp.com/send?phone=5511999714280" class="contact-button">Contato</a>
         </div>
     </div>
-
-
 
     <!-- Seção Sobre a Empresa -->
     <section id="sobre-empresa">
@@ -81,48 +74,45 @@
     </section>
 
     <!-- Seção Produtos -->
-   <!-- Seção Produtos -->
-<section id="produtos">
-    <div class="container">
-        <h2>Nossos Produtos</h2>
-        <div class="card-container">
-            <div class="card">
-                <img src="assets/images/celulas/celula 26v.jpg" alt="Produto 1" class="card-image">
-                <h3><a href="pages/26v.html" class="product-link">EVE ICR18650/26V</a></h3>
-                <p>Importação e venda de baterias íon-lítio 18650 3,7V e células de lítio de alta performance.
-                    Oferecemos baterias LFP (LiFePO4), ideais para energia solar, mobilidade elétrica e outras
-                    aplicações. Trabalhamos com produtos de qualidade, disponíveis para compra exclusiva via
-                    WhatsApp.</p>
-            </div>
-            <div class="card">
-                <img src="assets/images/celulas/celula 33v.jpg" alt="Produto 2" class="card-image">
-                <h3><a href="pages/33v.html" class="product-link">EVE INR18650/33V</a></h3>
-                <p>Com capacidade de 3200mah e voltagem nominal de 3,7V, esta célula oferece maior autonomia e
-                    eficiência energética. É uma escolha excelente para sistemas que demandam maior potência e
-                    durabilidade, como equipamentos portáteis e soluções residenciais de armazenamento.</p>
-            </div>
-            <div class="card">
-                <img src="assets/images/celulas/Célula 35V.jpg" alt="Produto 3" class="card-image">
-                <h3><a href="pages/35v.html" class="product-link">EVE INR18650/35V</a></h3>
-                <p>Nossa célula mais avançada, com capacidade de 3500mAh e voltagem nominal de 3,7V. Projetada para
-                    demandas de alta performance, é ideal para veículos elétricos, sistemas de armazenamento de
-                    energia e outras aplicações que requerem máxima confiabilidade e longa vida útil.</p>
-            </div>
-            <div class="card">
-                <img src="assets/images/celulas/celulanova.png" class="card-image quarta-imagem" alt="Imagem 4">
-                <div class="coming-soon-banner">Em Breve</div>
-                <h3>
-                    <span class="product-title">EVE LiFePO4 3.2V LFP 105Ah Prismatic Battery Cell - HDA</span>
-                </h3>
-                <p>Em breve disponível! Nossa célula de bateria prismática LFP de 105Ah oferecerá alta estabilidade térmica, 
-                   longa vida útil e excelente desempenho em ciclos de carga e descarga. Ideal para sistemas de armazenamento 
-                   de energia e aplicações solares. Aguarde novidades em nossas redes sociais!</p>
+    <section id="produtos">
+        <div class="container">
+            <h2>Nossos Produtos</h2>
+            <div class="card-container">
+                <div class="card">
+                    <img src="assets/images/celulas/celula-26v.jpg" alt="Produto 1" class="card-image">
+                    <h3><a href="pages/26v.html" class="product-link">EVE ICR18650/26V</a></h3>
+                    <p>Importação e venda de baterias íon-lítio 18650 3,7V e células de lítio de alta performance.
+                        Oferecemos baterias LFP (LiFePO4), ideais para energia solar, mobilidade elétrica e outras
+                        aplicações. Trabalhamos com produtos de qualidade, disponíveis para compra exclusiva via
+                        WhatsApp.</p>
+                </div>
+                <div class="card">
+                    <img src="assets/images/celulas/celula-33v.jpg" alt="Produto 2" class="card-image">
+                    <h3><a href="pages/33v.html" class="product-link">EVE INR18650/33V</a></h3>
+                    <p>Com capacidade de 3200mah e voltagem nominal de 3,7V, esta célula oferece maior autonomia e
+                        eficiência energética. É uma escolha excelente para sistemas que demandam maior potência e
+                        durabilidade, como equipamentos portáteis e soluções residenciais de armazenamento.</p>
+                </div>
+                <div class="card">
+                    <img src="assets/images/celulas/celula-33v.jpg" alt="Produto 3" class="card-image">
+                    <h3><a href="pages/35v.html" class="product-link">EVE INR18650/35V</a></h3>
+                    <p>Nossa célula mais avançada, com capacidade de 3500mAh e voltagem nominal de 3,7V. Projetada para
+                        demandas de alta performance, é ideal para veículos elétricos, sistemas de armazenamento de
+                        energia e outras aplicações que requerem máxima confiabilidade e longa vida útil.</p>
+                </div>
+                <div class="card">
+                    <img src="assets/images/celulas/celulanova.png" class="card-image quarta-imagem" alt="Imagem 4">
+                    <div class="coming-soon-banner">Em Breve</div>
+                    <h3>
+                        <span class="product-title">EVE LiFePO4 3.2V LFP 105Ah Prismatic Battery Cell - HDA</span>
+                    </h3>
+                    <p>Em breve disponível! Nossa célula de bateria prismática LFP de 105Ah oferecerá alta estabilidade térmica, 
+                       longa vida útil e excelente desempenho em ciclos de carga e descarga. Ideal para sistemas de armazenamento 
+                       de energia e aplicações solares. Aguarde novidades em nossas redes sociais!</p>
+                </div>
             </div>
         </div>
-    </div>
-</section>
     </section>
-
 
     <!-- Rodapé -->
     <footer class="footer" id="rodape">
@@ -138,27 +128,25 @@
             </div>
         </div>
     </footer>
-</body>
 
-<script>
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-        anchor.addEventListener('click', function (e) {
-            e.preventDefault(); // Evita o comportamento padrão
-            const targetId = this.getAttribute('href').substring(1); // Obtém o ID do destino
-            const targetElement = document.getElementById(targetId);
+    <script>
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                const targetId = this.getAttribute('href').substring(1);
+                const targetElement = document.getElementById(targetId);
 
-            if (targetElement) {
-                // Ajuste da rolagem com offset
-                const offset = 80; // Define o deslocamento superior
-                const topPosition = targetElement.offsetTop - offset;
+                if (targetElement) {
+                    const offset = 80;
+                    const topPosition = targetElement.offsetTop - offset;
 
-                window.scrollTo({
-                    top: topPosition,
-                    behavior: 'smooth' // Animação suave
-                });
-            }
+                    window.scrollTo({
+                        top: topPosition,
+                        behavior: 'smooth'
+                    });
+                }
+            });
         });
-    });
-</script>
-
+    </script>
+</body>
 </html>
