--- a/pages/26v.html
+++ b/pages/26v.html
@@ -29,7 +29,7 @@
                 <div class="product-image-container">
                     <a href="https://api.whatsapp.com/send?phone=5511999714280" class="purchase-button">Comprar
                         Agora</a>
-                    <img src="../assets/images/celulas/celula 26v.jpg" alt="Célula 33V" class="product-image">
+                    <img src="../assets/images/celulas/celula-26v.jpg" alt="Célula 33V" class="product-image">
                 </div>
                 <div class="product-specifications">
                     <h2>Especificações</h2>
