script para o google ads

--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
     <meta name="author" content="Overcel">
     <meta name="keywords"
         content="Bateria íon-lítio 18650 3,7v, Bateria, celulas, celulas de litio, bateria LFP, LFP, energia solar">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16881239132">
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'AW-16881239132');
+    </script>
 </head>
 
 <body id="topo">
@@ -81,10 +92,9 @@
                 <div class="card">
                     <img src="assets/images/celulas/celula-26v.jpg" alt="Produto 1" class="card-image">
                     <h3><a href="pages/26v.html" class="product-link">EVE ICR18650/26V</a></h3>
-                    <p>Importação e venda de baterias íon-lítio 18650 3,7V e células de lítio de alta performance.
-                        Oferecemos baterias LFP (LiFePO4), ideais para energia solar, mobilidade elétrica e outras
-                        aplicações. Trabalhamos com produtos de qualidade, disponíveis para compra exclusiva via
-                        WhatsApp.</p>
+                    <p>Esta é uma versão com capacidade nominal de 2600mAh e voltagem nominal de 3,7V. Com uma
+                        capacidade um pouco menor, é indicada para dispositivos de menor consumo ou para aplicações onde
+                        o peso e o custo-benefício são mais importantes do que a duração da bateria em si.</p>
                 </div>
                 <div class="card">
                     <img src="assets/images/celulas/celula-33v.jpg" alt="Produto 2" class="card-image">
@@ -106,9 +116,11 @@
                     <h3>
                         <span class="product-title">EVE LiFePO4 3.2V LFP 105Ah Prismatic Battery Cell - HDA</span>
                     </h3>
-                    <p>Em breve disponível! Nossa célula de bateria prismática LFP de 105Ah oferecerá alta estabilidade térmica, 
-                       longa vida útil e excelente desempenho em ciclos de carga e descarga. Ideal para sistemas de armazenamento 
-                       de energia e aplicações solares. Aguarde novidades em nossas redes sociais!</p>
+                    <p>Em breve disponível! Nossa célula de bateria prismática LFP de 105Ah oferecerá alta estabilidade
+                        térmica,
+                        longa vida útil e excelente desempenho em ciclos de carga e descarga. Ideal para sistemas de
+                        armazenamento
+                        de energia e aplicações solares. Aguarde novidades em nossas redes sociais!</p>
                 </div>
             </div>
         </div>
@@ -149,4 +161,5 @@
         });
     </script>
 </body>
+
 </html>
