--- a/pages/35v.html
+++ b/pages/35v.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EVE INR18650/35V</title>
     <link rel="stylesheet" href="../assets/css/products.css">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&family=Poppins:wght@400;600&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16881239132">
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'AW-16881239132');
+    </script>
 </head>
 
 <body>
@@ -25,7 +37,8 @@
             <h1>EVE INR18650/35V</h1>
             <div class="product-content">
                 <div class="product-image-container">
-                    <a href="https://api.whatsapp.com/send?phone=5511999714280" class="purchase-button">Comprar Agora</a>
+                    <a href="https://api.whatsapp.com/send?phone=5511999714280" class="purchase-button">Comprar
+                        Agora</a>
                     <img src="../assets/images/celulas/Célula-35V.jpg" alt="Célula 35V" class="product-image">
                 </div>
                 <div class="product-specifications">
@@ -47,14 +60,18 @@
 
             <h2>Aviso</h2>
             <div class="warning-text">
-                <p>AVISO: O usuário deve ter um entendimento apropriado sobre baterias de íon de lítio antes da compra...</p>
+                <p>AVISO: O usuário deve ter um entendimento apropriado sobre baterias de íon de lítio antes da
+                    compra...</p>
                 <ul>
                     <li>Não use com cigarros eletrônicos, vaporizadores ou dispositivos semelhantes.</li>
-                    <li>O uso inadequado ou manuseio de baterias de íon de lítio pode representar um sério risco de lesão pessoal, danos à propriedade ou morte.</li>
-                    <li>Baterias podem explodir, queimar ou causar um incêndio se usadas de forma inadequada ou manuseadas.</li>
+                    <li>O uso inadequado ou manuseio de baterias de íon de lítio pode representar um sério risco de
+                        lesão pessoal, danos à propriedade ou morte.</li>
+                    <li>Baterias podem explodir, queimar ou causar um incêndio se usadas de forma inadequada ou
+                        manuseadas.</li>
                     <li>Use apenas com circuitos adequados em um pacote de bateria protegido.</li>
                     <li>Use apenas dentro das especificações listadas pelo fabricante.</li>
-                    <li>Não armazene bateria solta em um bolso, bolsa, etc. - Sempre use um estojo ou caixa de proteção.</li>
+                    <li>Não armazene bateria solta em um bolso, bolsa, etc. - Sempre use um estojo ou caixa de proteção.
+                    </li>
                     <li>Mantenha afastado de objetos metálicos para evitar curto-circuito.</li>
                     <li>Não use se o invólucro ou isolante estiver danificado ou rasgado.</li>
                     <li>Não use se estiver danificada de alguma forma.</li>
@@ -62,10 +79,13 @@
                     <li>Não modifique, desmonte, perfure, corte, amasse ou incinere.</li>
                     <li>Não exponha a líquidos ou altas temperaturas.</li>
                     <li>Não solde, faça soldagem pontual apenas.</li>
-                    <li>O usuário deve estar familiarizado com o manuseio de baterias de íon de lítio antes da compra.</li>
+                    <li>O usuário deve estar familiarizado com o manuseio de baterias de íon de lítio antes da compra.
+                    </li>
                     <li>O uso de baterias é POR SUA CONTA E RISCO.</li>
-                    <li>Sempre carregue em ou sobre uma superfície à prova de fogo e nunca deixe baterias carregando sem supervisão.</li>
-                    <li>Revendedores DEVEM encaminhar todos os avisos a todos os clientes para referência e segurança.</li>
+                    <li>Sempre carregue em ou sobre uma superfície à prova de fogo e nunca deixe baterias carregando sem
+                        supervisão.</li>
+                    <li>Revendedores DEVEM encaminhar todos os avisos a todos os clientes para referência e segurança.
+                    </li>
                 </ul>
             </div>
         </div>
@@ -78,10 +98,13 @@
             <div class="social-media">
                 <a href="https://www.instagram.com/overcel.br/" target="_blank"><i class="fab fa-instagram"></i></a>
                 <a href="https://www.youtube.com/@Overcelbr" target="_blank"><i class="fab fa-youtube"></i></a>
-                <a href="https://api.whatsapp.com/send?phone=5511999714280" target="_blank"><i class="fab fa-whatsapp"></i></a>
-                <a href="https://www.linkedin.com/company/105758085/admin/dashboard/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://api.whatsapp.com/send?phone=5511999714280" target="_blank"><i
+                        class="fab fa-whatsapp"></i></a>
+                <a href="https://www.linkedin.com/company/105758085/admin/dashboard/" target="_blank"><i
+                        class="fab fa-linkedin"></i></a>
             </div>
         </div>
     </footer>
 </body>
+
 </html>
