google snippet pra campanha no google ads

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
 
         gtag('config', 'AW-16881239132');
     </script>
+
+    <!-- Event snippet for Website traffic conversion page -->
+    <script>
+        gtag('event', 'conversion', { 'send_to': 'AW-16881239132/UNsDCOXl5qgaENyIzfE-' });
+    </script>
+
 </head>
 
 <body id="topo">
@@ -104,7 +110,7 @@
                         durabilidade, como equipamentos portáteis e soluções residenciais de armazenamento.</p>
                 </div>
                 <div class="card">
-                    <img src="assets/images/celulas/celula-33v.jpg" alt="Produto 3" class="card-image">
+                    <img src="assets/images/celulas/celula-35v.jpg" alt="Produto 3" class="card-image">
                     <h3><a href="pages/35v.html" class="product-link">EVE INR18650/35V</a></h3>
                     <p>Nossa célula mais avançada, com capacidade de 3500mAh e voltagem nominal de 3,7V. Projetada para
                         demandas de alta performance, é ideal para veículos elétricos, sistemas de armazenamento de
