robot.txt e mais algumas tags para SEO

--- a/index.html
+++ b/index.html
@@ -34,6 +34,24 @@
     <meta name="keywords"
         content="Bateria íon-lítio 18650 3,7v, Bateria, celulas, celulas de litio, bateria LFP, LFP, energia solar">
 
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.overcel.com.br/">
+    <meta property="og:title" content="Overcel - Células de Bateria Importadas e de Alta Qualidade">
+    <meta property="og:description"
+        content="A Overcel é especializada em células de bateria importadas de alta qualidade. Compre pelo WhatsApp e receba em todo o Brasil!">
+    <meta property="og:image" content="https://www.overcel.com.br/assets/images/logo-social.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.overcel.com.br/">
+    <meta property="twitter:title" content="Overcel - Células de Bateria Importadas e de Alta Qualidade">
+    <meta property="twitter:description"
+        content="A Overcel é especializada em células de bateria importadas de alta qualidade. Compre pelo WhatsApp e receba em todo o Brasil!">
+    <meta property="twitter:image" content="https://www.overcel.com.br/assets/images/logo-social.png">
+
+    <meta name="google-site-verification" content="seu-código-de-verificação" />
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16881239132">
     </script>
@@ -48,6 +66,23 @@
     <!-- Event snippet for Website traffic conversion page -->
     <script>
         gtag('event', 'conversion', { 'send_to': 'AW-16881239132/UNsDCOXl5qgaENyIzfE-' });
+    </script>
+
+    <!-- Facebook Pixel Code -->
+    <script>
+        !function (f, b, e, v, n, t, s) {
+            if (f.fbq) return; n = f.fbq = function () {
+                n.callMethod ?
+                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+            n.queue = []; t = b.createElement(e); t.async = !0;
+            t.src = v; s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', 'seu-id-do-pixel');
+        fbq('track', 'PageView');
     </script>
 
 </head>
