--- a/pages/35v.html
+++ b/pages/35v.html
@@ -9,6 +9,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&family=Poppins:wght@400;600&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.overcel.com.br/">
+    <meta property="og:title" content="Overcel - Células de Bateria Importadas e de Alta Qualidade">
+    <meta property="og:description"
+        content="A Overcel é especializada em células de bateria importadas de alta qualidade. Compre pelo WhatsApp e receba em todo o Brasil!">
+    <meta property="og:image" content="https://www.overcel.com.br/assets/images/logo-social.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.overcel.com.br/">
+    <meta property="twitter:title" content="Overcel - Células de Bateria Importadas e de Alta Qualidade">
+    <meta property="twitter:description"
+        content="A Overcel é especializada em células de bateria importadas de alta qualidade. Compre pelo WhatsApp e receba em todo o Brasil!">
+    <meta property="twitter:image" content="https://www.overcel.com.br/assets/images/logo-social.png">
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16881239132">
     </script>
@@ -18,6 +35,25 @@
         gtag('js', new Date());
 
         gtag('config', 'AW-16881239132');
+    </script>
+
+    <meta name="google-site-verification" content="seu-código-de-verificação" />
+
+    <!-- Facebook Pixel Code -->
+    <script>
+        !function (f, b, e, v, n, t, s) {
+            if (f.fbq) return; n = f.fbq = function () {
+                n.callMethod ?
+                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            };
+            if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+            n.queue = []; t = b.createElement(e); t.async = !0;
+            t.src = v; s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s)
+        }(window, document, 'script',
+            'https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', 'seu-id-do-pixel');
+        fbq('track', 'PageView');
     </script>
 </head>
 
