alterações para dar enfase no 18650

--- a/pages/35v.html
+++ b/pages/35v.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EVE INR18650/35V</title>
+    <title>18650 35V</title>
     <link rel="stylesheet" href="../assets/css/products.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&family=Poppins:wght@400;600&display=swap"
         rel="stylesheet">
@@ -70,7 +70,7 @@
     <!-- Conteúdo Principal -->
     <div class="main-container">
         <div class="product-page">
-            <h1>EVE INR18650/35V</h1>
+            <h1>18650 35V</h1>
             <div class="product-content">
                 <div class="product-image-container">
                     <a href="https://api.whatsapp.com/send?phone=5511999714280" class="purchase-button">Comprar
