--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         content="A Overcel é especializada em células de bateria importadas de alta qualidade. Compre pelo WhatsApp e receba em todo o Brasil!">
 
     <!-- Definição do título da página -->
-    <title>Overcel - Células de Bateria Importadas e de Alta Qualidade</title>
+    <title>Overcel - Células de Bateria 18650 Importadas e de Alta Qualidade</title>
 
     <!-- Link para o arquivo CSS local -->
     <link rel="stylesheet" href="assets/css/home.css">
@@ -132,21 +132,21 @@
             <div class="card-container">
                 <div class="card">
                     <img src="assets/images/celulas/celula-26v.jpg" alt="Produto 1" class="card-image">
-                    <h3><a href="pages/26v.html" class="product-link">EVE ICR18650/26V</a></h3>
-                    <p>Esta é uma versão com capacidade nominal de 2600mAh e voltagem nominal de 3,7V. Com uma
+                    <h3><a href="pages/26v.html" class="product-link">18650 26V</a></h3>
+                    <p>Esta é uma versão da bateria 18650 com capacidade nominal de 2600mAh e voltagem nominal de 3,7V. Com uma
                         capacidade um pouco menor, é indicada para dispositivos de menor consumo ou para aplicações onde
                         o peso e o custo-benefício são mais importantes do que a duração da bateria em si.</p>
                 </div>
                 <div class="card">
                     <img src="assets/images/celulas/celula-33v.jpg" alt="Produto 2" class="card-image">
-                    <h3><a href="pages/33v.html" class="product-link">EVE INR18650/33V</a></h3>
+                    <h3><a href="pages/33v.html" class="product-link">18650 33V</a></h3>
                     <p>Com capacidade de 3200mah e voltagem nominal de 3,7V, esta célula oferece maior autonomia e
                         eficiência energética. É uma escolha excelente para sistemas que demandam maior potência e
                         durabilidade, como equipamentos portáteis e soluções residenciais de armazenamento.</p>
                 </div>
                 <div class="card">
                     <img src="assets/images/celulas/Célula-35V.jpg" alt="Produto 3" class="card-image">
-                    <h3><a href="pages/35v.html" class="product-link">EVE INR18650/35V</a></h3>
+                    <h3><a href="pages/35v.html" class="product-link">18650 35V</a></h3>
                     <p>Nossa célula mais avançada, com capacidade de 3500mAh e voltagem nominal de 3,7V. Projetada para
                         demandas de alta performance, é ideal para veículos elétricos, sistemas de armazenamento de
                         energia e outras aplicações que requerem máxima confiabilidade e longa vida útil.</p>
