Sua mensagem de commit aqui

--- a/pages/26v.html
+++ b/pages/26v.html
@@ -55,6 +55,23 @@
         fbq('init', 'seu-id-do-pixel');
         fbq('track', 'PageView');
     </script>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Product",
+      "name": "Bateria 18650 EVE 26V",
+      "description": "Bateria de lítio 18650 com capacidade de 2600mAh, ideal para projetos de energia.",
+      "brand": {
+        "@type": "Brand",
+        "name": "EVE"
+      },
+      "offers": {
+        "@type": "Offer",
+        "availability": "https://schema.org/InStock"
+      }
+    }
+    </script>
 </head>
 
 <body>
@@ -75,7 +92,8 @@
                 <div class="product-image-container">
                     <a href="https://api.whatsapp.com/send?phone=5511999714280" class="purchase-button">Comprar
                         Agora</a>
-                    <img src="../assets/images/celulas/celula-26v.jpg" alt="Célula 33V" class="product-image">
+                    <img src="/assets/images/celulas/bateria-18650-26v.jpg" alt="Bateria 18650 EVE 26V"
+                        class="card-image">
                 </div>
                 <div class="product-specifications">
                     <h2>Especificações</h2>
