--- a/pages/35v.html
+++ b/pages/35v.html
@@ -44,7 +44,7 @@
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
@@ -55,6 +55,24 @@
         fbq('init', 'seu-id-do-pixel');
         fbq('track', 'PageView');
     </script>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Product",
+      "name": "Bateria 18650 EVE 35V",
+      "description": "Bateria de lítio 18650 com capacidade de 3500mAh, ideal para projetos de energia.",
+      "brand": {
+        "@type": "Brand",
+        "name": "EVE"
+      },
+      "offers": {
+        "@type": "Offer",
+        "availability": "https://schema.org/InStock"
+      }
+    }
+    </script>
+
 </head>
 
 <body>
@@ -75,7 +93,8 @@
                 <div class="product-image-container">
                     <a href="https://api.whatsapp.com/send?phone=5511999714280" class="purchase-button">Comprar
                         Agora</a>
-                    <img src="../assets/images/celulas/Célula-35V.jpg" alt="Célula 35V" class="product-image">
+                    <img src="/assets/images/celulas/bateria-18650-35V.jpg" alt="Bateria 18650 EVE 35V"
+                        class="card-image">
                 </div>
                 <div class="product-specifications">
                     <h2>Especificações</h2>
