Snippet Price nos Produtos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Meta descrição para SEO -->
     <meta name="description"
-        content="A Overcel é especializada em células de bateria importadas de alta qualidade. Compre pelo WhatsApp e receba em todo o Brasil!">
+        content="Bateria 18650 EVE 33V com capacidade de 3300mAh. Células de lítio 18650 de alta qualidade para projetos de energia. Entrega para todo Brasil.">
 
     <!-- Definição do título da página -->
     <title>Overcel - Células de Bateria Importadas e de Alta Qualidade</title>
@@ -79,8 +79,8 @@
                 comércio internacional para atender a uma necessidade crítica e crescente: a demanda por células de
                 bateria de alta qualidade.
             </p>
-            <p>Em parceria estratégica com a EVE, um dos maiores e mais respeitados fabricantes de células de bateria do
-                mundo, trazemos ao mercado uma solução confiável, inovadora e alinhada às mais rigorosas exigências
+            <p>Em parceria estratégica com a EVE, um dos maiores e mais respeitados fabricantes de células de bateria
+                18650 do mundo, trazemos ao mercado uma solução confiável, inovadora e alinhada às mais rigorosas exigências
                 técnicas e ambientais. Essa colaboração reflete nosso compromisso em oferecer produtos de ponta e
                 estabelecer relações comerciais sólidas e duradouras.</p>
             <p>Embora sejamos novos no setor de energia, nossa longa trajetória no comércio global nos dá a base para
@@ -96,21 +96,24 @@
             <h2>Nossos Produtos</h2>
             <div class="card-container">
                 <div class="card">
-                    <img src="assets/images/celulas/celula-26v.jpg" alt="Produto 1" class="card-image">
+                    <img src="assets/images/celulas/bateria-18650-26v..jpg" alt="Bateria 18650 EVE 26V - 3300mAh"
+                        class="card-image">
                     <h3><a href="pages/26v.html" class="product-link">EVE ICR18650/26V</a></h3>
                     <p>Esta é uma versão com capacidade nominal de 2600mAh e voltagem nominal de 3,7V. Com uma
                         capacidade um pouco menor, é indicada para dispositivos de menor consumo ou para aplicações onde
                         o peso e o custo-benefício são mais importantes do que a duração da bateria em si.</p>
                 </div>
                 <div class="card">
-                    <img src="assets/images/celulas/celula-33v.jpg" alt="Produto 2" class="card-image">
+                    <img src="assets/images/celulas/bateria-18650-33v..jpg" alt="Bateria 18650 EVE 33V - 3300mAh"
+                        class="card-image">
                     <h3><a href="pages/33v.html" class="product-link">EVE INR18650/33V</a></h3>
                     <p>Com capacidade de 3200mah e voltagem nominal de 3,7V, esta célula oferece maior autonomia e
                         eficiência energética. É uma escolha excelente para sistemas que demandam maior potência e
                         durabilidade, como equipamentos portáteis e soluções residenciais de armazenamento.</p>
                 </div>
                 <div class="card">
-                    <img src="assets/images/celulas/Célula-35V.jpg" alt="Produto 3" class="card-image">
+                    <img src="assets/images/celulas/bateria-18650-35v..jpg" alt="Bateria 18650 EVE 35V - 3300mAh"
+                        class="card-image">
                     <h3><a href="pages/35v.html" class="product-link">EVE INR18650/35V</a></h3>
                     <p>Nossa célula mais avançada, com capacidade de 3500mAh e voltagem nominal de 3,7V. Projetada para
                         demandas de alta performance, é ideal para veículos elétricos, sistemas de armazenamento de
