--- a/pages/26v.html
+++ b/pages/26v.html
@@ -19,6 +19,50 @@
 
         gtag('config', 'AW-16881239132');
     </script>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org/",
+      "@type": "Product",
+      "name": "Bateria 18650 EVE 26V",
+      "image": "https://www.overcel.com.br/assets/images/celulas/bateria-18650-26v.jpg",
+      "description": "Bateria de lítio 18650 com capacidade de 2600mAh, ideal para projetos de energia.",
+      "brand": {
+        "@type": "Brand",
+        "name": "EVE"
+      },
+      "offers": {
+        "@type": "Offer",
+        "url": "https://www.overcel.com.br/pages/26v.html",
+        "priceCurrency": "BRL",
+        "price": "0",
+        "priceValidUntil": "2025-12-31",
+        "availability": "https://schema.org/InStock",
+        "seller": {
+          "@type": "Organization",
+          "name": "Overcel"
+      
+          },
+          "deliveryTime": {
+            "@type": "ShippingDeliveryTime",
+            "handlingTime": {
+              "@type": "QuantitativeValue",
+              "minValue": 1,
+              "maxValue": 2,
+              "unitCode": "DAY"
+            },
+            "transitTime": {
+              "@type": "QuantitativeValue",
+              "minValue": 1,
+              "maxValue": 5,
+              "unitCode": "DAY"
+            }
+          }
+        }
+      },
+      "mpn": "EVE-ICR18650-26V"
+    }
+    </script>
 </head>
 
 <body>
