keywords e url canonica

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Informações de SEO adicionais -->
     <meta name="author" content="Overcel">
     <meta name="keywords"
-        content="Bateria íon-lítio 18650 3,7v, Bateria, celulas, celulas de litio, bateria LFP, LFP, energia solar">
+        content="Bateria íon-lítio 18650 3,7v, Bateria, celulas, celulas de litio, bateria LFP, LFP, energia solar, célula 18650, 18650, bateria de lítio 18650, células para baterias, bateria de lítio, células de bateria importadas, células EVE, células para bicicletas elétricas, células para patinetes elétricos">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -73,7 +73,7 @@
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
@@ -114,7 +114,8 @@
                 comércio internacional para atender a uma necessidade crítica e crescente: a demanda por células de
                 bateria de alta qualidade.
             </p>
-            <p>Em parceria estratégica com a EVE, um dos maiores e mais respeitados fabricantes de células de bateria 18650 do
+            <p>Em parceria estratégica com a EVE, um dos maiores e mais respeitados fabricantes de células de bateria
+                18650 do
                 mundo, trazemos ao mercado uma solução confiável, inovadora e alinhada às mais rigorosas exigências
                 técnicas e ambientais. Essa colaboração reflete nosso compromisso em oferecer produtos de ponta e
                 estabelecer relações comerciais sólidas e duradouras.</p>
@@ -131,22 +132,26 @@
             <h2>Nossos Produtos</h2>
             <div class="card-container">
                 <div class="card">
-                    <img src="assets/images/celulas/bateria-18650-26v.jpg" alt="Bateria 18650 EVE 26V" class="card-image">
-                    <h3><a href="pages/26v.html" class="product-link">18650 26V</a></h3>
-                    <p>Esta é uma versão da bateria 18650 com capacidade nominal de 2600mAh e voltagem nominal de 3,7V. Com uma
+                    <img src="assets/images/celulas/bateria-18650-26v.jpg" alt="Bateria 18650 EVE 26V"
+                        class="card-image">
+                    <h3><a href="pages/18650.html" class="product-link">18650 26V</a></h3>
+                    <p>Esta é uma versão da bateria 18650 com capacidade nominal de 2600mAh e voltagem nominal de 3,7V.
+                        Com uma
                         capacidade um pouco menor, é indicada para dispositivos de menor consumo ou para aplicações onde
                         o peso e o custo-benefício são mais importantes do que a duração da bateria em si.</p>
                 </div>
                 <div class="card">
-                    <img src="assets/images/celulas/bateria-18650-33v.jpg" alt="Bateria 18650 EVE 33V" class="card-image">
-                    <h3><a href="pages/33v.html" class="product-link">18650 33V</a></h3>
+                    <img src="assets/images/celulas/bateria-18650-33v.jpg" alt="Bateria 18650 EVE 33V"
+                        class="card-image">
+                    <h3><a href="pages/18650-33v.html" class="product-link">18650 33V</a></h3>
                     <p>Com capacidade de 3200mah e voltagem nominal de 3,7V, esta célula oferece maior autonomia e
                         eficiência energética. É uma escolha excelente para sistemas que demandam maior potência e
                         durabilidade, como equipamentos portáteis e soluções residenciais de armazenamento.</p>
                 </div>
                 <div class="card">
-                    <img src="/assets/images/celulas/bateria-18650-35V.jpg" alt="Bateria 18650 EVE 35V" class="card-image">
-                    <h3><a href="pages/35v.html" class="product-link">18650 35V</a></h3>
+                    <img src="/assets/images/celulas/bateria-18650-35V.jpg" alt="Bateria 18650 EVE 35V"
+                        class="card-image">
+                    <h3><a href="pages/18650-35v.html" class="product-link">18650 35V</a></h3>
                     <p>Nossa célula mais avançada, com capacidade de 3500mAh e voltagem nominal de 3,7V. Projetada para
                         demandas de alta performance, é ideal para veículos elétricos, sistemas de armazenamento de
                         energia e outras aplicações que requerem máxima confiabilidade e longa vida útil.</p>
