--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 </div>
 
                 <!-- Produto 2 -->
-                <div class="produto-card">                    
+                <div class="produto-card">
                     <div class="produto-image">
                         <img src="assets/images/celulas/bateria-18650-33v.jpg"
                             alt="Célula 18650 33V para baterias de lítio" class="produto-img">
@@ -746,6 +746,7 @@
     </a>
 
     <!-- Scripts -->
+    <script src="assets/js/scroll-animations.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 
