atualizacoes do blog

--- a/pages/18650-35v.html
+++ b/pages/18650-35v.html
@@ -559,60 +559,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-logo">
-                    <img src="../assets/images/logoo.png" alt="Overcel Logo" class="footer-logo-img">
-                    <p>OVERCEL</p>
-                </div>
-
-                <div class="footer-links">
-                    <div class="footer-links-column">
-                        <h3>Links Rápidos</h3>
-                        <ul>
-                            <li><a href="../index.html#hero">Início</a></li>
-                            <li><a href="../index.html#sobre">Sobre Nós</a></li>
-                            <li><a href="../index.html#produtos">Produtos</a></li>
-                            <li><a href="../index.html#aplicacoes">Aplicações</a></li>
-                            <li><a href="../index.html#contato">Contato</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="footer-links-column">
-                        <h3>Produtos</h3>
-                        <ul>
-                            <li><a href="18650-26v.html">Células 18650 26V</a></li>
-                            <li><a href="18650-33v.html">Células 18650 33V</a></li>
-                            <li><a href="18650-35v.html">Células 18650 35V</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="footer-links-column">
-                        <h3>Suporte</h3>
-                        <ul>
-                            <li><a href="../index.html#faq">Perguntas Frequentes</a></li>
-                            <li><a href="../index.html#contato">Atendimento</a></li>
-                            <li><a href="https://api.whatsapp.com/send?phone=5511999714280">WhatsApp</a></li>
-                            <li><a href="mailto:contato@overcel.com.br">E-mail</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-            <div class="footer-bottom">
-                <div class="copyright">
-                    <p>&copy; 2025 Overcel - Todos os direitos reservados</p>
-                </div>
-
-                <div class="terms">
-                    <a href="../politica-privacidade.html">Política de Privacidade</a>
-                    <span>|</span>
-                    <a href="../termos-condicoes.html">Termos e Condições</a>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <div id="footer-container"></div>
 
     <!-- Back to Top Button -->
     <a href="#" class="back-to-top">
@@ -627,6 +574,7 @@
     <!-- Scripts -->
     <script src="../assets/js/main.js"></script>
     <script src="../assets/js/products.js"></script>
+    <script src="../assets/js/load-footer.js"></script>
 </body>
 
 </html>
