--- a/recursos/glossario.html
+++ b/recursos/glossario.html
@@ -218,13 +218,11 @@
         </div>
     </div>
 
-    <!-- Footer (incluir o mesmo footer do site) -->
-    <footer class="footer">
-        <!-- Conteúdo do footer aqui -->
-    </footer>
+    <div id="footer-container"></div>
 
     <!-- Scripts -->
     <script src="/assets/js/main.js"></script>
     <script src="/assets/js/glossario.js"></script>
+    <script src="/assets/js/load-footer.js"></script>
 </body>
 </html>
