--- a/pages/18650-35v.html
+++ b/pages/18650-35v.html
@@ -246,10 +246,10 @@
             <div class="produto-container">
                 <div class="produto-gallery">
                     <div class="produto-badge premium">Premium</div>
-                    <img src="../assets/images/celulas/bateria-18650-35v.jpg" alt="Célula 18650 35V"
+                    <img src="/assets/images/celulas/bateria-18650-35v.png" alt="Célula 18650 35V"
                         class="produto-main-image">
                     <div class="produto-thumbnails">
-                        <img src="../assets/images/celulas/bateria-18650-35v.jpg" alt="Célula 18650 35V - Vista 1"
+                        <img src="/assets/images/celulas/bateria-18650-35v.png" alt="Célula 18650 35V - Vista 1"
                             class="produto-thumbnail active">
                     </div>
                 </div>
