--- a/footer-template.html
+++ b/footer-template.html
@@ -73,7 +73,7 @@
                         <ul>
                             <li><a href="/index.html">Sobre Nós</a></li>
                             <li><a href="/index.html">Contato</a></li>
-                            <li><a href="/index.html">Parceiros</a></li>
+                            <li><a href="/parceiros.html">Parceiros</a></li>
                             <li><a href="/index.html">Depoimentos</a></li>
                             <li><a href="/index.html">Privacidade</a></li>
                         </ul>
