--- a/bateria-li-ion-18650-recarregavel/18650-33v.html
+++ b/bateria-li-ion-18650-recarregavel/18650-33v.html
@@ -532,7 +532,7 @@
                         <a href="/calculadora-bateria.html" class="contextual-resource-link">
                             <i class="fas fa-calculator"></i> Calculadora de Bateria
                         </a>
-                        <a href="/glossario.html" class="contextual-resource-link">
+                        <a href="/recursos/glossario.html" class="contextual-resource-link">
                             <i class="fas fa-list-alt"></i> Glossário Técnico
                         </a>
                     </div>
