--- a/bateria-li-ion-18650-recarregavel/18650-33v.html
+++ b/bateria-li-ion-18650-recarregavel/18650-33v.html
@@ -526,10 +526,10 @@
                 <div class="contextual-section">
                     <h3 class="contextual-title">Recursos Úteis</h3>
                     <div class="contextual-resources">
-                        <a href="/guias/como-escolher-celulas-18650.html" class="contextual-resource-link">
+                        <a href="/bateria-li-ion-18650-recarregavel/18650.html" class="contextual-resource-link">
                             <i class="fas fa-book"></i> Guia de Escolha
                         </a>
-                        <a href="/calculadora-bateria.html" class="contextual-resource-link">
+                        <a href="/blog/calculadora-ebike.html" class="contextual-resource-link">
                             <i class="fas fa-calculator"></i> Calculadora de Bateria
                         </a>
                         <a href="/recursos/glossario.html" class="contextual-resource-link">
