atualizando links de produtos

--- a/aplicacoes/equipamentos-eletronicos.html
+++ b/aplicacoes/equipamentos-eletronicos.html
@@ -308,7 +308,7 @@
                                     <li><i class="fas fa-bolt"></i> 7.5A</li>
                                     <li><i class="fas fa-money-check-alt"></i> Melhor custo</li>
                                 </ul>
-                                <a href="/pages/18650-26v.html" class="btn btn-outline">Ver Detalhes</a>
+                                <a href="/bateria-li-ion-18650-recarregavel/18650.html" class="btn btn-outline">Ver Detalhes</a>
                             </div>
                         </div>
                         
@@ -322,7 +322,7 @@
                                     <li><i class="fas fa-bolt"></i> 10A</li>
                                     <li><i class="fas fa-star"></i> Melhor equilíbrio</li>
                                 </ul>
-                                <a href="/pages/18650-33v.html" class="btn btn-outline">Ver Detalhes</a>
+                                <a href="/bateria-li-ion-18650-recarregavel/18650-33v.html" class="btn btn-outline">Ver Detalhes</a>
                             </div>
                         </div>
                         
@@ -336,7 +336,7 @@
                                     <li><i class="fas fa-bolt"></i> 10.2A</li>
                                     <li><i class="fas fa-crown"></i> Máxima capacidade</i>
                                 </ul>
-                                <a href="/pages/18650-35v.html" class="btn btn-outline">Ver Detalhes</a>
+                                <a href="/bateria-li-ion-18650-recarregavel/18650-35v.html" class="btn btn-outline">Ver Detalhes</a>
                             </div>
                         </div>
                     </div>
