--- a/aplicacoes/ups-nobreak.html
+++ b/aplicacoes/ups-nobreak.html
@@ -406,7 +406,7 @@
                                 <li><i class="fas fa-bolt"></i> 10A</li>
                                 <li><i class="fas fa-sync-alt"></i> 500+ ciclos</li>
                             </ul>
-                            <a href="/pages/18650-33v.html" class="btn btn-outline">Ver Detalhes</a>
+                            <a href="/bateria-li-ion-18650-recarregavel/18650-33v.html" class="btn btn-outline">Ver Detalhes</a>
                         </div>
                     </div>
                     
@@ -420,7 +420,7 @@
                                 <li><i class="fas fa-bolt"></i> 10.2A</li>
                                 <li><i class="fas fa-sync-alt"></i> 500+ ciclos</li>
                             </ul>
-                            <a href="/pages/18650-35v.html" class="btn btn-outline">Ver Detalhes</a>
+                            <a href="/bateria-li-ion-18650-recarregavel/18650-35v.html" class="btn btn-outline">Ver Detalhes</a>
                         </div>
                     </div>
                 </div>
