--- a/bateria-li-ion-18650-recarregavel/18650-33v.html
+++ b/bateria-li-ion-18650-recarregavel/18650-33v.html
@@ -14,7 +14,7 @@
     <meta name="author" content="Overcel">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://www.overcel.com.br/pages/18650-33v.html">
+    <link rel="canonical" href="https://www.overcel.com.br/bateria-li-ion-18650-recarregavel/18650.html">
 
     <!-- Favicon -->
     <link rel="icon" href="../assets/images/favicon.ico" type="image/x-icon">
@@ -22,7 +22,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.overcel.com.br/pages/18650-33v.html">
+    <meta property="og:url" content="https://www.overcel.com.br/bateria-li-ion-18650-recarregavel/18650-35v.html">
     <meta property="og:title" content="Célula 18650 33V | Overcel - Células de Bateria Importadas">
     <meta property="og:description"
         content="Célula de bateria 18650 33V com 3300mAh de capacidade, ideal para bicicletas elétricas, patinetes e sistemas de armazenamento de energia.">
@@ -30,7 +30,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://www.overcel.com.br/pages/18650-33v.html">
+    <meta property="twitter:url" content="https://www.overcel.com.br/bateria-li-ion-18650-recarregavel/18650-33v.html">
     <meta property="twitter:title" content="Célula 18650 33V | Overcel - Células de Bateria Importadas">
     <meta property="twitter:description"
         content="Célula de bateria 18650 33V com 3300mAh de capacidade, ideal para bicicletas elétricas, patinetes e sistemas de armazenamento de energia.">
@@ -486,13 +486,13 @@
                             <tr class="action-row">
                                 <td></td>
                                 <td>
-                                    <a href="/pages/18650.html" class="btn btn-outline btn-sm">Ver Detalhes</a>
+                                    <a href="/bateria-li-ion-18650-recarregavel/18650.html" class="btn btn-outline btn-sm">Ver Detalhes</a>
                                 </td>
                                 <td class="highlighted">
                                     <a href="#" class="btn btn-primary btn-sm">Produto Atual</a>
                                 </td>
                                 <td>
-                                    <a href="/pages/18650-35v.html" class="btn btn-outline btn-sm">Ver Detalhes</a>
+                                    <a href="/bateria-li-ion-18650-recarregavel/18650-35v.html" class="btn btn-outline btn-sm">Ver Detalhes</a>
                                 </td>
                             </tr>
                         </tbody>
