--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                         <p class="produto-description">Célula com excelente custo-benefício, perfeita para aplicações de
                             menor consumo e projetos onde o peso e preço são fatores importantes.</p>
                         <div class="produto-actions">
-                            <a href="pages/18650.html" class="btn btn-outline btn-sm">Ver Detalhes</a>
+                            <a href="bateria-li-ion-18650-recarregavel/18650.html" class="btn btn-outline btn-sm">Ver Detalhes</a>
                             <a href="https://api.whatsapp.com/send?phone=5511999714280"
                                 class="btn btn-primary btn-sm">Comprar</a>
                         </div>
@@ -308,7 +308,7 @@
                         <p class="produto-description">Célula de alta capacidade com 3300mAh, ideal para montagem de
                             baterias para bicicletas elétricas, patinetes e sistemas de armazenamento de energia.</p>
                         <div class="produto-actions">
-                            <a href="pages/18650-33v.html" class="btn btn-outline btn-sm">Ver Detalhes</a>
+                            <a href="bateria-li-ion-18650-recarregavel/18650-33v.html" class="btn btn-outline btn-sm">Ver Detalhes</a>
                             <a href="https://api.whatsapp.com/send?phone=5511999714280"
                                 class="btn btn-primary btn-sm">Comprar</a>
                         </div>
@@ -341,7 +341,7 @@
                         <p class="produto-description">Nossa célula de maior capacidade, projetada para demandas de alta
                             performance em veículos elétricos e sistemas que exigem máxima potência.</p>
                         <div class="produto-actions">
-                            <a href="pages/18650-35v.html" class="btn btn-outline btn-sm">Ver Detalhes</a>
+                            <a href="bateria-li-ion-18650-recarregavel/18650-35v.html" class="btn btn-outline btn-sm">Ver Detalhes</a>
                             <a href="https://api.whatsapp.com/send?phone=5511999714280"
                                 class="btn btn-primary btn-sm">Comprar</a>
                         </div>
