--- a/sitemap.html
+++ b/sitemap.html
@@ -100,19 +100,19 @@
                     </h2>
                     <ul class="sitemap-links">
                         <li>
-                            <a href="/pages/18650-26v.html">Célula 18650 26V</a>
+                            <a href="/bateria-li-ion-18650-recarregavel/18650.html">Célula 18650 26V</a>
                         </li>
                         <li>
-                            <a href="/pages/18650-33v.html">Célula 18650 33V</a>
+                            <a href="/bateria-li-ion-18650-recarregavel/18650-33v.html">Célula 18650 33V</a>
                         </li>
                         <li>
-                            <a href="/pages/18650-35v.html">Célula 18650 35V</a>
+                            <a href="/bateria-li-ion-18650-recarregavel/18650-35v.html">Célula 18650 35V</a>
                         </li>
                         <li>
-                            <a href="/produtos/comparativo-celulas.html">Comparativo de Células</a>
+                            <a href="/bateria-li-ion-18650-recarregavel/18650.html">Comparativo de Células</a>
                         </li>
                         <li>
-                            <a href="/produtos/guia-escolha.html">Guia de Escolha</a>
+                            <a href="/bateria-li-ion-18650-recarregavel/18650.html">Guia de Escolha</a>
                         </li>
                     </ul>
                 </div>
