--- a/bateria-li-ion-18650-recarregavel/18650-35v.html
+++ b/bateria-li-ion-18650-recarregavel/18650-35v.html
@@ -486,10 +486,10 @@
                             <tr class="action-row">
                                 <td></td>
                                 <td>
-                                    <a href="/pages/18650.html" class="btn btn-outline btn-sm">Ver Detalhes</a>
+                                    <a href="/bateria-li-ion-18650-recarregavel/18650.html" class="btn btn-outline btn-sm">Ver Detalhes</a>
                                 </td>
                                 <td>
-                                    <a href="/pages/18650-33v.html" class="btn btn-outline btn-sm">Ver Detalhes</a>
+                                    <a href="/bateria-li-ion-18650-recarregavel/18650-33v.html" class="btn btn-outline btn-sm">Ver Detalhes</a>
                                 </td>
                                 <td class="highlighted">
                                     <a href="#" class="btn btn-primary btn-sm">Produto Atual</a>
