--- a/bateria-li-ion-18650-recarregavel/18650.html
+++ b/bateria-li-ion-18650-recarregavel/18650.html
@@ -485,10 +485,10 @@
                                     <a href="#" class="btn btn-primary btn-sm">Produto Atual</a>
                                 </td>
                                 <td>
-                                    <a href="/pages/18650-33v.html" class="btn btn-outline btn-sm">Ver Detalhes</a>
+                                    <a href="/bateria-li-ion-18650-recarregavel/18650-33v.html" class="btn btn-outline btn-sm">Ver Detalhes</a>
                                 </td>
                                 <td>
-                                    <a href="/pages/18650-35v.html" class="btn btn-outline btn-sm">Ver Detalhes</a>
+                                    <a href="/bateria-li-ion-18650-recarregavel/18650-35v.html" class="btn btn-outline btn-sm">Ver Detalhes</a>
                                 </td>
                             </tr>
                         </tbody>
