--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta property="og:title" content="Overcel | Células de Bateria 18650 Importadas para Fabricantes de Baterias">
     <meta property="og:description"
         content="Fornecemos células de bateria 18650 de alta qualidade da EVE para fabricantes de packs de baterias para bikes, patinetes e sistemas de armazenamento. Células 26V, 33V e 35V com entrega para todo Brasil.">
-    <meta property="og:image" content="https://www.overcel.com.br/assets/images/og-image.jpg">
+        <meta property="og:image" content="https://www.overcel.com.br/assets/images/og-image.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
